Fixed scrollbar issue

--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -25,7 +25,7 @@ body {
   margin-top: 50px;
 }
 .row {
-  width: 100vw;
+  width: 99vw;
 }
 .card {
   border-radius: 25px;
